[package]
name = "ggxchain-runtime-toronto"
version.workspace = true
license = "Unlicense"
description = "GGX Chain PoS Runtime"
publish = false
authors.workspace = true
edition.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log.workspace = true
scale-codec = { package = "parity-scale-codec", workspace = true }
scale-info.workspace = true
serde = { workspace = true, optional = true }

# Substrate
sp-api.workspace = true
sp-application-crypto.workspace = true
sp-arithmetic.workspace = true
sp-block-builder.workspace = true
sp-consensus-aura.workspace = true
sp-consensus-beefy.workspace = true
sp-core.workspace = true
sp-inherents.workspace = true
sp-io.workspace = true
sp-mmr-primitives.workspace = true
sp-offchain.workspace = true
sp-runtime.workspace = true
sp-session.workspace = true
sp-staking.workspace = true
sp-std.workspace = true
sp-transaction-pool.workspace = true
sp-version.workspace = true
# Substrate FRAME
frame-benchmarking = { workspace = true, optional = true }
frame-election-provider-support.workspace = true
frame-executive.workspace = true
frame-support.workspace = true
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api.workspace = true
frame-system.workspace = true
pallet-assets.workspace = true
pallet-aura.workspace = true
pallet-authorship.workspace = true
pallet-balances.workspace = true
pallet-beefy-mmr.workspace = true
pallet-beefy.workspace = true
pallet-bounties.workspace = true
pallet-conviction-voting.workspace = true
pallet-election-provider-multi-phase.workspace = true
pallet-grandpa.workspace = true
pallet-identity.workspace = true
pallet-im-online.workspace = true
pallet-indices.workspace = true
pallet-mmr.workspace = true
pallet-multisig.workspace = true
pallet-offences.workspace = true
pallet-preimage.workspace = true
pallet-proxy.workspace = true
pallet-randomness-collective-flip.workspace = true
pallet-ranked-collective.workspace = true
pallet-referenda.workspace = true
pallet-scheduler.workspace = true
pallet-session = { workspace = true, features = ["historical"] }
pallet-society.workspace = true
pallet-staking.workspace = true
pallet-sudo.workspace = true
pallet-timestamp.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true
pallet-transaction-payment.workspace = true
pallet-treasury.workspace = true
pallet-utility.workspace = true
pallet-vesting.workspace = true
pallet-whitelist.workspace = true

# Frontier
fp-evm.workspace = true
fp-rpc.workspace = true
fp-self-contained.workspace = true

# Frontier FRAME
pallet-base-fee.workspace = true
pallet-dynamic-fee.workspace = true
pallet-ethereum.workspace = true
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"] }
pallet-evm-chain-id.workspace = true
pallet-hotfix-sufficients.workspace = true

# GGX
account-filter.workspace = true
runtime-common = { workspace = true, features = ["precompiles", "pos"] }

# Astar
astar-primitives.workspace = true
pallet-chain-extension-xvm.workspace = true
pallet-ethereum-checked.workspace = true
pallet-xvm = { workspace = true, default-features = false }

# Wasm contracts
pallet-contracts-primitives.workspace = true
pallet-contracts.workspace = true

# Ibc
ibc-proto.workspace = true
ibc.workspace = true
pallet-ibc-utils.workspace = true
pallet-ibc.workspace = true
pallet-ics20-transfer.workspace = true
prost.workspace = true

# Eth-light client
pallet-chain-extension-receipt-registry.workspace = true
pallet-eth2-light-client.workspace = true
pallet-receipt-registry.workspace = true
webb-consensus-types.workspace = true
webb-proposals.workspace = true

# Orml
orml-asset-registry.workspace = true
orml-tokens.workspace = true
orml-traits.workspace = true

# BTC bridge
annuity.workspace = true
btc-relay.workspace = true
clients-info.workspace = true
escrow.workspace = true
fee.workspace = true
interbtc-currency.workspace = true
issue.workspace = true
loans.workspace = true
nomination.workspace = true
oracle.workspace = true
primitives.workspace = true
redeem.workspace = true
replace.workspace = true
reward.workspace = true
security.workspace = true
staking.workspace = true
vault-registry.workspace = true

btc-relay-rpc-runtime-api.workspace = true
issue-rpc-runtime-api.workspace = true
oracle-rpc-runtime-api.workspace = true
redeem-rpc-runtime-api.workspace = true
replace-rpc-runtime-api.workspace = true
reward-rpc-runtime-api.workspace = true
vault-registry-rpc-runtime-api.workspace = true

# Dex
pallet-dex.workspace = true

[build-dependencies]
substrate-wasm-builder.workspace = true

[dev-dependencies]
paste.workspace = true

[features]
default = ["std", "aura", "with-rocksdb-weights"]
fast-runtime = []

std = [
	"scale-codec/std",
	"scale-info/std",
	"serde/std",
	# Substrate
	"sp-api/std",
	"sp-arithmetic/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-beefy/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-mmr-primitives/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	# Substrate FRAME
	"frame-benchmarking?/std",
	"frame-election-provider-support/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-assets/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-beefy/std",
	"pallet-beefy-mmr/std",
	"pallet-bounties/std",
	"pallet-conviction-voting/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-mmr/std",
	"pallet-multisig/std",
	"pallet-offences/std",
	"pallet-preimage/std",
	"pallet-proxy/std",
	"pallet-randomness-collective-flip/std",
	"pallet-ranked-collective/std",
	"pallet-referenda/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-society/std",
	"pallet-staking/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"pallet-vesting/std",
	"pallet-whitelist/std",
	# Frontier
	"fp-evm/std",
	"fp-rpc/std",
	"fp-self-contained/std",
	# Frontier FRAME
	"pallet-base-fee/std",
	"pallet-dynamic-fee/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-chain-id/std",
	"pallet-hotfix-sufficients/std",
	# GGX
	"account-filter/std",
	"runtime-common/std",
	# Astar
	"astar-primitives/std",
	"pallet-chain-extension-xvm/std",
	"pallet-ethereum-checked/std",
	"pallet-xvm/std",
	# Wasm contracts
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	# IBC
	"pallet-ibc/std",
	"pallet-ics20-transfer/std",
	"pallet-ibc-utils/std",
	# Eth light client
	"pallet-eth2-light-client/std",
	"pallet-receipt-registry/std",
	# Orml
	"orml-tokens/std",
	"orml-traits/std",
	# BTC bridge
	"annuity/std",
	"btc-relay/std",
	"escrow/std",
	"interbtc-currency/std",
	"clients-info/std",
	"fee/std",
	"loans/std",
	"issue/std",
	"nomination/std",
	"oracle/std",
	"primitives/std",
	"redeem/std",
	"replace/std",
	"reward/std",
	"security/std",
	"staking/std",
	"vault-registry/std",

	"btc-relay-rpc-runtime-api/std",
	"issue-rpc-runtime-api/std",
	"oracle-rpc-runtime-api/std",
	"redeem-rpc-runtime-api/std",
	"replace-rpc-runtime-api/std",
	"reward-rpc-runtime-api/std",
	"vault-registry-rpc-runtime-api/std",
	#Dex
	"pallet-dex/std",
]
aura = []
allowlist = []
manual-seal = ["with-rocksdb-weights"]
with-rocksdb-weights = []
with-paritydb-weights = []
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
