[package]
name = "xvm-chain-extension-types"
version = "0.1.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://astar.network"
repository = "https://github.com/AstarNetwork/astar-frame"
description = "Types definitions for contracts using xvm chain-extension."

[dependencies]
scale-codec = { package = "parity-scale-codec", workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
]
