[package]
name = "flipper"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

cc = { version = "=1.0.76", optional = true }
compiler_builtins = { version = "=0.1.85", optional = true }
dlmalloc = { version = "=0.2.3", optional = true }
fortanix-sgx-abi = { version = "=0.5.0", optional = true }
getopts = { version = "0.2.21", optional = true }
gimli = { version = "=0.26.1", optional = true }
libc = { version = "=0.2.138", optional = true }
miniz_oxide = { version = "=0.5.3", optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
	"ink/std",
	"scale/std",
	"scale-info/std",
	"cc",
	"compiler_builtins",
	"dlmalloc",
	"fortanix-sgx-abi",
	"getopts",
	"gimli",
	"libc",
	"miniz_oxide",
]
ink-as-dependency = []
