[package]
name = "xvm-flipper"
version = "4.3.0"
authors = [""]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.3.0", default-features = false }
ink_env = { version = "4.3.0", default-features = false }
ink_prelude	 = { version = "4.3.0", default-features = false }
hex-literal = { version = "0.4.1" }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }

ethabi = { git = "https://github.com/akru/ethabi", default-features = false }

[dev-dependencies]
ink_e2e = "4.3.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
