[package]
name = "store_xvm"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }

ethabi = { git = "https://github.com/akru/ethabi", default-features = false }

hex-literal = "0.4.1"
xvm-environment = { path = "../../lib/xvm-environment", default-features = false }


[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "xvm-environment/std",
]
ink-as-dependency = []
